# proiectpdp

./: CMakeLists.txt  Clasa.h  Controller.h  Disponibilitate.h  Materie.h  Orar.h  Profesor.h  main.cpp  names.txt
